Fix vsphere stemcell script to get the agent commit from git
Signed-off-by: Ben Moss <bmoss@pivotal.io>

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -5,7 +5,7 @@ image: docker:///pivotalgreenhouse/packer-base
 
 inputs:
   - name: version
-  - name: bosh-agent-version
+  - name: bosh-agent
   - name: bosh-agent-zip
   - name: bosh-agent-deps-zip
   - name: ovftool-linux
