--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -1,7 +1,10 @@
 ---
 platform: linux
 
-image: docker:///pivotalgreenhouse/packer-base
+image_resource:
+  type: docker-image
+  source:
+    repository: pivotalgreenhouse/packer-base
 
 inputs:
   - name: version
@@ -15,8 +18,7 @@ outputs:
   - name: bosh-vsphere-stemcell
 
 run:
-  path: ruby
-  args: [stemcell-builder/create-vsphere-stemcell.rb]
+  path: stemcell-builder/scripts/create-vsphere-stemcell.rb
 
 params:
   OUTPUT_DIR: replace-me
