--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -15,7 +15,7 @@ inputs:
   - name: stemcell-builder
 
 outputs:
-  - name: bosh-vsphere-stemcell
+  - name: bosh-windows-stemcell
 
 run:
   path: stemcell-builder/scripts/create-vsphere-stemcell.rb
