Fix a bug with concourse 1.6
image_resource seems to have a bug, so use image

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -1,10 +1,7 @@
 ---
 platform: linux
 
-image_resource:
-  type: docker-image
-  source:
-    repository: pivotalgreenhouse/packer-base
+image: docker:///pivotalgreenhouse/packer-base
 
 inputs:
   - name: version
