--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -8,10 +8,10 @@ image_resource:
 
 inputs:
   - name: windows-ami
+  - name: bosh-agent-sha
   - name: bosh-agent-zip
   - name: bosh-agent-deps-zip
   - name: version
-  - name: bosh-agent
   - name: stemcell-builder
 
 outputs:
