Use 'image_resource' instead of 'image'
Revert if this breaks windows-stemcell-pipeline, this was requested by
@mavenraven for acceptance.

[#127651779]

Signed-off-by: Charlie Vieth <cviethjr@pivotal.io>

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -1,7 +1,10 @@
 ---
 platform: linux
 
-image: docker:///pivotalgreenhouse/packer-base
+image_resource:
+  type: docker-image
+  source:
+    repository: pivotalgreenhouse/packer-base
 
 inputs:
   - name: version
