Upload PSWindowsUpdate resource to guest VM
Additionally:
- Remove unused vagrant-ssh.bat script
- Create install-ps-windows-update-module.ps1 script
- Check for sha1sum or shasum functions before starting packer build

[#127651779]

Signed-off-by: Ben Moss <bmoss@pivotal.io>

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -13,6 +13,7 @@ inputs:
   - name: bosh-agent-deps-zip
   - name: ovftool-linux
   - name: stemcell-builder
+  - name: ps-windows-update
 
 outputs:
   - name: bosh-windows-stemcell
