Cleanup WinSxS folder and compact disk
[#126039603]

Signed-off-by: Charlie Vieth <cviethjr@pivotal.io>

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -15,6 +15,7 @@ inputs:
   - name: stemcell-builder
   - name: ps-windows-update
   - name: base-iso
+  - name: ultradefrag-zip
 
 outputs:
   - name: bosh-windows-stemcell
