--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -7,7 +7,8 @@ image_resource:
     repository: pivotalgreenhouse/packer-base
 
 inputs:
-  - name: windows-ami
+  - name: windows-ami-us-east-1
+  - name: windows-ami-us-west-2
   - name: bosh-agent-sha
   - name: bosh-agent-zip
   - name: bosh-agent-deps-zip
@@ -24,5 +25,7 @@ params:
   OUTPUT_DIR: replace-me
   AWS_ACCESS_KEY: replace-me
   AWS_SECRET_KEY: replace-me
-  VPC_ID: replace-me
-  SUBNET_ID: replace-me
+  VPC_ID_US_EAST_1: replace-me
+  SUBNET_ID_US_EAST_1: replace-me
+  VPC_ID_US_WEST_2: replace-me
+  SUBNET_ID_US_WEST_2: replace-me
