--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -7,8 +7,7 @@ image_resource:
     repository: pivotalgreenhouse/packer-base
 
 inputs:
-  - name: windows-ami-us-east-1
-  - name: windows-ami-us-west-2
+  - name: stemcell-regions
   - name: bosh-agent-sha
   - name: bosh-agent-zip
   - name: bosh-agent-deps-zip
