--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -5,6 +5,7 @@ image_resource:
   type: docker-image
   source:
     repository: pivotalgreenhouse/packer-base
+    tag: develop
 
 inputs:
   - name: version
