Output AMIs to check the status before BWATS

--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -16,6 +16,7 @@ inputs:
 
 outputs:
   - name: bosh-windows-stemcell
+  - name: amis
 
 run:
   path: stemcell-builder/scripts/create-aws-stemcell.rb
