Adding params for tasks
When executing the concourse tasks in a one-off matter, we need the params

--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -20,3 +20,10 @@ outputs:
 
 run:
   path: stemcell-builder/scripts/create-aws-stemcell.rb
+
+params:
+  OUTPUT_DIR:
+  OS_VERSION: windows2012R2
+  AWS_ACCESS_KEY:
+  AWS_SECRET_KEY:
+
