--- a/tasks/create-gcp-stemcell.yml
+++ b/tasks/create-gcp-stemcell.yml
@@ -7,9 +7,7 @@ image_resource:
     repository: pivotalgreenhouse/packer-base
 
 inputs:
-  - name: bosh-agent-sha
-  - name: bosh-agent-zip
-  - name: bosh-agent-deps-zip
+  - name: compiled-agent
   - name: version
   - name: stemcell-builder
 
