--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -7,7 +7,7 @@ image_resource:
     repository: pivotalgreenhouse/packer-base
 
 inputs:
-  - name: stemcell-regions
+  - name: base-amis
   - name: compiled-agent
   - name: version
   - name: stemcell-builder
