Add ProductKey when sysprep the windows
[#139051663]

Signed-off-by: Amin Jamali <ajamali@pivotal.io>

--- a/tasks/create-vsphere-stemcell.yml
+++ b/tasks/create-vsphere-stemcell.yml
@@ -33,6 +33,9 @@ params:
   REMOTE_USERNAME: replace-me
   REMOTE_PASSWORD: replace-me
   ADMINISTRATOR_PASSWORD: replace-me
+  PRODUCT_KEY: ""
+  OWNER: ""
+  ORGANIZATION: ""
   GUEST_NETWORK_ADDRESS: replace-me
   GUEST_NETWORK_MASK: replace-me
   GUEST_NETWORK_GATEWAY: replace-me
