--- a/tasks/create-aws-stemcell.yml
+++ b/tasks/create-aws-stemcell.yml
@@ -15,6 +15,7 @@ inputs:
 outputs:
   - name: bosh-windows-stemcell
   - name: amis
+  - name: sha
 
 run:
   path: stemcell-builder/scripts/create-aws-stemcell.rb
