--- a/tasks/create-gcp-stemcell.yml
+++ b/tasks/create-gcp-stemcell.yml
@@ -7,6 +7,7 @@ image_resource:
     repository: pivotalgreenhouse/packer-base
 
 inputs:
+  - name: base-gcp-image
   - name: compiled-agent
   - name: version
   - name: stemcell-builder
